[gd_scene load_steps=7 format=3 uid="uid://bgsib8kg78p22"]

[ext_resource type="Script" path="res://scenes/rocket/rocket.gd" id="1_a5dm3"]
[ext_resource type="Texture2D" uid="uid://dua1rp8pokkuf" path="res://resources/sprites/Rocket.png" id="1_x6odo"]
[ext_resource type="AudioStream" uid="uid://bfxc2dbe4ta7i" path="res://resources/audio/sfx/rocket-launch-sfx-253937.mp3" id="3_b2ay2"]
[ext_resource type="Texture2D" uid="uid://5rm4i75mvym8" path="res://resources/sprites/Wolke.png" id="4_m785d"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wsrod"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.14
angle_min = 1.07288e-05
angle_max = 228.2
direction = Vector3(0, 0, 0)
gravity = Vector3(0, -75, 0)
scale_min = 0.1
scale_max = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq518"]
size = Vector2(127, 44)

[node name="Rocket" type="Node2D"]
script = ExtResource("1_a5dm3")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.485703, 0.485704, 0.485703, 0.635294)
position = Vector2(56, -5.96046e-08)
scale = Vector2(1, 1)
amount = 50
process_material = SubResource("ParticleProcessMaterial_wsrod")
texture = ExtResource("4_m785d")
lifetime = 5.0
visibility_rect = Rect2(-1000, -1000, 2000, 2000)

[node name="RocketSprite" type="Sprite2D" parent="."]
position = Vector2(14, 12)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_x6odo")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.5, 1)
shape = SubResource("RectangleShape2D_rq518")

[node name="RocketAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(9, -2)
stream = ExtResource("3_b2ay2")

[node name="VisibleChecker" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(118, 2)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleChecker" to="." method="_on_visible_checker_screen_exited"]
